test/tests/stages/18_structures/invalid_types/incompatible_types/struct_param_mismatch.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: one
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: x
            Int: 
          CMemberDeclaration: 
            TIdentifier: y
            Int: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: two
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
          CMemberDeclaration: 
            TIdentifier: b
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: take_struct_param
        List[1]: 
          TIdentifier: param
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CDot: 
                  TIdentifier: x
                  CVar: 
                    TIdentifier: param
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Structure: 
              TIdentifier: one
              Bool: 0
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arg
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 2
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: two
                    Bool: 0
                  None: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: take_struct_param
                  List[1]: 
                    CVar: 
                      TIdentifier: arg
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
